fix: wrong docker-compose place

--- a/templates/coolify.service.j2
+++ b/templates/coolify.service.j2
@@ -4,10 +4,10 @@ After=network-online.target
 
 [Service]
 Restart=on-failure
-WorkingDirectory={{ coolify_app_volume }}
-ExecStart=/bin/sh -c 'source /etc/profile.d/coolify.sh && coolify-services && coolify-run'
-ExecStop=/bin/sh -c 'source /etc/profile.d/coolify.sh && coolify-services down && coolify-action stop'
-ExecReload=/bin/sh -c 'source /etc/profile.d/coolify.sh && coolify-services restart && coolify-action restart'
+WorkingDirectory={{ coolify_data_volume }}
+ExecStart=docker-compose up
+ExecStop=docker-compose down
+ExecReload=docker-compose restart
 
 [Install]
 WantedBy=multi-user.target
