feat: custom dockerfile

--- a/templates/.env.j2
+++ b/templates/.env.j2
@@ -3,14 +3,14 @@
 ####################################
 # Domain where your Coolify instance will be available and reachable.
 # It's the same as you set in Github OAuth App and Github App as <domain>.
-DOMAIN={{ coolify_env.DOMAIN }}
+DOMAIN='{{ coolify_env.DOMAIN }}'
 ## Let's Encrypt contact email required
-EMAIL={{ coolify_env.LETSENCRYPT_EMAIL }}
+EMAIL='{{ coolify_env.LETSENCRYPT_EMAIL }}'
 
 # JWT Token Sign Key for logging you in to Coolify's frontend
-JWT_SIGN_KEY={{ coolify_env.JWT_SIGN_KEY | d('jwt-key') }}
+JWT_SIGN_KEY='{{ coolify_env.JWT_SIGN_KEY | d('jwt-key') }}'
 # Encryption key for SECRETS - do NOT share it with others!
-SECRETS_ENCRYPTION_KEY={{ coolify_env.SECRETS_ENCRYPTION_KEY | d('') }}
+SECRETS_ENCRYPTION_KEY='{{ coolify_env.SECRETS_ENCRYPTION_KEY | d('') }}'
 
 # Docker Engine
 DOCKER_ENGINE=/var/run/docker.sock
@@ -19,18 +19,18 @@ DOCKER_NETWORK=coollabs
 
 # Mongodb
 # Values in case if you are using our Mongodb installation - CHANGE user and password fields!
-MONGODB_PORT={{ coolify_env.MONGODB_PORT | d(27017) }}
-MONGODB_USER={{ coolify_env.MONGODB_USER | d('supercooldbuser') }}
-MONGODB_PASSWORD={{ coolify_env.MONGODB_PASSWORD | d('developmentPassword4db') }}
+MONGODB_PORT='{{ coolify_env.MONGODB_PORT | d(27017) }}'
+MONGODB_USER='{{ coolify_env.MONGODB_USER | d('supercooldbuser') }}'
+MONGODB_PASSWORD='{{ coolify_env.MONGODB_PASSWORD | d('developmentPassword4db') }}'
 MONGODB_DB=coolLabs-prod
 
 # Frontend only variables
-VITE_GITHUB_APP_CLIENTID={{ coolify_env.VITE_GITHUB_APP_CLIENTID | d('') }}
-VITE_GITHUB_APP_NAME={{ coolify_env.VITE_GITHUB_APP_NAME | d('') }}
+VITE_GITHUB_APP_CLIENTID='{{ coolify_env.VITE_GITHUB_APP_CLIENTID | d('') }}'
+VITE_GITHUB_APP_NAME='{{ coolify_env.VITE_GITHUB_APP_NAME | d('') }}'
 
 # Github OAuth & App secrets and private key - you can get it from Github.
-GITHUB_APP_CLIENT_SECRET={{ coolify_env.GITHUB_APP_CLIENT_SECRET | d('') }}
-GITHUP_APP_WEBHOOK_SECRET={{ coolify_env.GITHUB_APP_CLIENT_SECRET | d('') }}
+GITHUB_APP_CLIENT_SECRET='{{ coolify_env.GITHUB_APP_CLIENT_SECRET | d('') }}'
+GITHUP_APP_WEBHOOK_SECRET='{{ coolify_env.GITHUB_APP_WEBHOOK_SECRET | d('') }}'
 
 # It should look like this. Newlines breaks with '\n'
-GITHUB_APP_PRIVATE_KEY={{ coolify_env.GITHUB_APP_PRIVATE_KEY }}
+GITHUB_APP_PRIVATE_KEY='{{ coolify_env.GITHUB_APP_PRIVATE_KEY.encode("unicode_escape").decode("utf-8") | d("") }}'
