refacto: various env review

--- a/templates/.env.j2
+++ b/templates/.env.j2
@@ -3,34 +3,36 @@
 ####################################
 # Domain where your Coolify instance will be available and reachable.
 # It's the same as you set in Github OAuth App and Github App as <domain>.
-DOMAIN='{{ coolify_env.DOMAIN }}'
+DOMAIN={{ _coolify_env.DOMAIN }}
 ## Let's Encrypt contact email required
-EMAIL='{{ coolify_env.LETSENCRYPT_EMAIL }}'
+EMAIL={{ _coolify_env.EMAIL }}
 
 # JWT Token Sign Key for logging you in to Coolify's frontend
-JWT_SIGN_KEY='{{ coolify_env.JWT_SIGN_KEY | d('jwt-key') }}'
+JWT_SIGN_KEY={{ _coolify_env.JWT_SIGN_KEY }}
 # Encryption key for SECRETS - do NOT share it with others!
-SECRETS_ENCRYPTION_KEY='{{ coolify_env.SECRETS_ENCRYPTION_KEY | d('') }}'
+SECRETS_ENCRYPTION_KEY={{ _coolify_env.SECRETS_ENCRYPTION_KEY }}
 
 # Docker Engine
 DOCKER_ENGINE=/var/run/docker.sock
 # Docker network to use internally between the proxy and your apps
-DOCKER_NETWORK=coollabs
+DOCKER_NETWORK={{ _coolify_env.DOCKER_NETWORK }}
 
 # Mongodb
 # Values in case if you are using our Mongodb installation - CHANGE user and password fields!
-MONGODB_PORT='{{ coolify_env.MONGODB_PORT | d(27017) }}'
-MONGODB_USER='{{ coolify_env.MONGODB_USER | d('supercooldbuser') }}'
-MONGODB_PASSWORD='{{ coolify_env.MONGODB_PASSWORD | d('developmentPassword4db') }}'
+MONGODB_HOST={{ _coolify_env.MONGODB_HOST }}
+MONGODB_PORT={{ _coolify_env.MONGODB_PORT | d(27017) }}
+MONGODB_USERNAME={{ _coolify_env.MONGODB_USERNAME }}
+MONGODB_PASSWORD_NON_ENC="{{ _coolify_env.MONGODB_PASSWORD }}"
+MONGODB_PASSWORD={{ _coolify_env.MONGODB_PASSWORD | urlencode() }}
 MONGODB_DB=coolLabs-prod
 
 # Frontend only variables
-VITE_GITHUB_APP_CLIENTID='{{ coolify_env.VITE_GITHUB_APP_CLIENTID | d('') }}'
-VITE_GITHUB_APP_NAME='{{ coolify_env.VITE_GITHUB_APP_NAME | d('') }}'
+VITE_GITHUB_APP_CLIENTID="{{ _coolify_env.VITE_GITHUB_APP_CLIENTID }}"
+VITE_GITHUB_APP_NAME="{{ _coolify_env.VITE_GITHUB_APP_NAME }}"
 
 # Github OAuth & App secrets and private key - you can get it from Github.
-GITHUB_APP_CLIENT_SECRET='{{ coolify_env.GITHUB_APP_CLIENT_SECRET | d('') }}'
-GITHUP_APP_WEBHOOK_SECRET='{{ coolify_env.GITHUB_APP_WEBHOOK_SECRET | d('') }}'
+GITHUB_APP_CLIENT_SECRET="{{ _coolify_env.GITHUB_APP_CLIENT_SECRET }}"
+GITHUP_APP_WEBHOOK_SECRET="{{ _coolify_env.GITHUP_APP_WEBHOOK_SECRET | d('') }}"
 
 # It should look like this. Newlines breaks with '\n'
-GITHUB_APP_PRIVATE_KEY='{{ coolify_env.GITHUB_APP_PRIVATE_KEY.encode("unicode_escape").decode("utf-8") | d("") }}'
+GITHUB_APP_PRIVATE_KEY="{{ _coolify_env.GITHUB_APP_PRIVATE_KEY.encode("unicode_escape").decode("utf-8") | d('') }}"
