fix: env issue not creating all

--- a/templates/.env.j2
+++ b/templates/.env.j2
@@ -19,16 +19,18 @@ DOCKER_NETWORK={{ _coolify_env.DOCKER_NETWORK }}
 
 # Mongodb
 # Values in case if you are using our Mongodb installation - CHANGE user and password fields!
-MONGODB_HOST={{ _coolify_env.MONGODB_HOST }}
-MONGODB_PORT={{ _coolify_env.MONGODB_PORT | d(27017) }}
-MONGODB_USERNAME={{ _coolify_env.MONGODB_USERNAME }}
-MONGODB_PASSWORD_NON_ENC="{{ _coolify_env.MONGODB_PASSWORD }}"
-MONGODB_PASSWORD={{ _coolify_env.MONGODB_PASSWORD | urlencode() }}
-MONGODB_DB=coolLabs-prod
+MONGODB_HOST=coollabs-mongodb
+MONGODB_PORT=27017
+MONGODB_USER={{ _coolify_env.MONGODB_USER }}
+MONGODB_PASSWORD={{ _coolify_env.MONGODB_PASSWORD }}
+MONGODB_ROOT_PASSWORD={{ _coolify_env.MONGODB_ROOT_PASSWORD }}
+MONGODB_DB={{ _coolify_env.MONGODB_DB }}
+MONGODB_DATABASE={{ _coolify_env.MONGODB_DB }}
+MONGODB_USERNAME={{ _coolify_env.MONGODB_USER }}
 
 # Frontend only variables
-VITE_GITHUB_APP_CLIENTID="{{ _coolify_env.VITE_GITHUB_APP_CLIENTID }}"
-VITE_GITHUB_APP_NAME="{{ _coolify_env.VITE_GITHUB_APP_NAME }}"
+VITE_GITHUB_APP_CLIENTID={{ _coolify_env.VITE_GITHUB_APP_CLIENTID }}
+VITE_GITHUB_APP_NAME={{ _coolify_env.VITE_GITHUB_APP_NAME }}
 
 # Github OAuth & App secrets and private key - you can get it from Github.
 GITHUB_APP_CLIENT_SECRET="{{ _coolify_env.GITHUB_APP_CLIENT_SECRET }}"
