--- a/templates/.env.j2
+++ b/templates/.env.j2
@@ -34,7 +34,7 @@ VITE_GITHUB_APP_NAME={{ _coolify_env.VITE_GITHUB_APP_NAME }}
 
 # Github OAuth & App secrets and private key - you can get it from Github.
 GITHUB_APP_CLIENT_SECRET="{{ _coolify_env.GITHUB_APP_CLIENT_SECRET }}"
-GITHUP_APP_WEBHOOK_SECRET="{{ _coolify_env.GITHUP_APP_WEBHOOK_SECRET | d('') }}"
+GITHUP_APP_WEBHOOK_SECRET="{{ _coolify_env.GITHUP_APP_WEBHOOK_SECRET }}"
 
 # It should look like this. Newlines breaks with '\n'
 GITHUB_APP_PRIVATE_KEY="{{ _coolify_env.GITHUB_APP_PRIVATE_KEY.encode("unicode_escape").decode("utf-8") | d('') }}"
